--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "Bug_Tracker",
+  "name": "bugtracker",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "node app.js",
+    "devStart": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -18,9 +19,12 @@
   },
   "homepage": "https://github.com/SarveshKadam/Bug-Tracker#readme",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
-    "helmet": "^4.2.0"
+    "express-ejs-layouts": "^2.5.0",
+    "helmet": "^4.2.0",
+    "mongoose": "^5.11.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
