--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
   },
   "homepage": "https://github.com/SarveshKadam/Bug-Tracker#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
     "helmet": "^4.2.0",
-    "mongoose": "^5.11.7"
+    "method-override": "^3.0.0",
+    "mongoose": "^5.11.7",
+    "mongoose-sequence": "^5.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
